Split event and membership payments with configurable Stripe card and transfer options
Co-authored-by: Cursor <cursoragent@cursor.com>